2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/cond.cc (resolve): Use compute_lub.
	* unify.hh (compute_lub): Declare.
	* unify.cc (unifier::compute_lub): Now public.
	(unifier::unifier): New constructor.
	(unify): Updated.
	(compute_lub): New method.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (get_fully_qualified_name): Only dereference
	compilation unit if it exists.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* source/parse.cc (counted_type): Don't look for [] if multiple
	<> were closed at once.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/classinst.hh (model_class_instance::resolve_hook):
	Removed.
	* model/classinst.cc (resolve_member_hook): Create member classes
	here.
	(resolve_hook): Removed.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/method.hh (model_method::same_arguments_p): Added
	argument.
	* model/method.cc (same_arguments_p): Use const_cast.  Added
	argument.
	(return_type_substitutable_p): Added 'exact' argument.
	(hides_or_overrides_p): Updated.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* model/unit.hh (model_unit_source::simple_name_map): New field.
	(model_unit_source::name_map): Removed.
	(model_unit_source::resolving): New field.
	(model_unit_source): Initialize it.
	(model_unit_source::resolve): Declare.
	* model/import.cc (check_referenced): Removed old comment.
	* model/unit.cc (check_imports): Removed old comment.
	(resolve): Initialize simple_name_map.  Don't resolve imports.
	(check_imports): Resolve all imports here.
	(look_up_name): Lazily resolve imports.
	(resolve): New overload.

2005-10-24  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (headers): Added intersect.hh.
	(model_sources): Added intersect.cc.
	* unify.cc (compute_glb): Make a new model_intersection_type.
	* typedefs.hh: Include intersect.hh.
	* model/intersect.cc: New file.
	* model/intersect.hh: New file.

2005-10-24  Tom Tromey  <tromey@redhat.com>
